--- a/Job Descriptions/Site Administrator.html
+++ b/Job Descriptions/Site Administrator.html
@@ -2,11 +2,38 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
-                <p class="description">SuperCamp Site Administrators create camp direction, inspiration, guidance, and tone, and are visible leaders at SuperCamp. They are responsible for the overall administrative and customer service success of SuperCamp, fostering an atmosphere of quality and growth. We rely on them to direct, organize, and run the camp office. Their “Ness” is comprised of the following qualities:</p>
+            <div class="col-xs-12 text-center">
+                <p class="description">SuperCamp Site Administrators create camp direction, inspiration, guidance, and tone, and are visible leaders at SuperCamp. They are responsible for the overall administrative and customer service success of SuperCamp, fostering an atmosphere of quality and growth. We rely on them to direct, organize, and run the camp office. Site Administrators possess the following qualities:</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" style="margin-bottom: 50px;">
+                <div class="col-xs-6 col-sm-offset-2 col-sm-4 comparison">
+                    <div class="comparison-item active comparison-feature">
+                        <span class="comparison-title">Professional</span>
+                        <h3 class="comparison-item-lead">Accountable</h3>
+                        <h3 class="comparison-item-lead">Transparent</h3>
+                        <h3 class="comparison-item-lead">Solution-Oriented</h3>
+                        <h3 class="comparison-item-lead">Thorough</h3>
+                        <h3 class="comparison-item-lead">Abel to Delegate</h3>
+                        <h3 class="comparison-item-lead">Able to Multi-Task</h3>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-sm-4 comparison">
+                    <div class="comparison-item active comparison-feature">
+                        <span class="comparison-title">Personal</span>
+                        <h3 class="comparison-item-lead">Approachable</h3>
+                        <h3 class="comparison-item-lead">Positive</h3>
+                        <h3 class="comparison-item-lead">Adaptable</h3>
+                        <h3 class="comparison-item-lead">Resilient</h3>
+                        <h3 class="comparison-item-lead">Resourceful</h3>
+                        <h3 class="comparison-item-lead">Confident</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
 
 
 <!--Job Description Title-->
@@ -550,7 +577,7 @@
 
     <div class="container" style="margin-top: 25px;">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12 text-center">
                 <h2 class="description-title"  id="description">Recruitment and Training Cycle</h2>
                 <p class="description">Site Administrators are “People people”. We place high importance on their eligibility and capacity to ensure camp will run smoothly. Many of our Site Administrators have experience in similar fields and, more importantly, all have a natural ability to build personal and professional relationships. Site Administrators receive around 30+ hours of training for their role.<p class="description">
                 <p class="description">This position is administrative exempt.</p>
@@ -560,8 +587,12 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12 text-center">
                 <a href="http://www.supercamp.com/staff/" class="pos-hdr-btn pos-hdr-btn-back"><i class="fa fa-undo"></i> Back</a>
+            </div>
+        </div>
+        <div class="row">
+            <div style="height:100px;">
             </div>
         </div>
     </div>
