--- a/Job Descriptions/Site Administrator.html
+++ b/Job Descriptions/Site Administrator.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12" style="margin-bottom: 50px;">
+            <div class="col-md-12">
                 <div class="col-xs-6 col-sm-offset-2 col-sm-4 comparison">
                     <div class="comparison-item active comparison-feature">
                         <span class="comparison-title">Professional</span>
@@ -38,7 +38,7 @@
 
 <!--Job Description Title-->
 
-    <div class="container">
+    <div class="container" style="margin-top: 50px;">
         <div class="row">
             <div class="col-sm-12">
                 <h2 class="description-title"  id="description">Job Description</h2>
