--- a/Job Descriptions/Site Counselor.html
+++ b/Job Descriptions/Site Counselor.html
@@ -568,7 +568,7 @@
                             </span>
                             <div class="feature-copy" style="    float: right;     width: 85%;">
                                 <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Summer Availability</h3>
-                                <p class="description">Available during summer for placement (June through mid-August)</p>
+                                <p class="description">Available during summer for placement (June through mid-August 2017)</p>
                             </div>
                         </div>
                     </div>
