--- a/Job Descriptions/Facilitator.html
+++ b/Job Descriptions/Facilitator.html
@@ -427,7 +427,7 @@
                                 <p style="margin-bottom: 10px !important;margin: 0 0 10px;font-size: 16px;">Attend a facilitator tryout: <strong><span style="text-decoration:underline;">"Paving the Way"</span></strong> - see options below.</p>
                                     <li>Option 1: In person: <strong>February 25, 2017</strong> in Chicago, IL</li>
                                     <li>Option 2: In person: <strong>March 4, 2017</strong> in San Diego, CA</li>
-                                    <li style="margin-bottom: 30px;">Option 3: Video tryout via Skype (if circumstances prevent you from attending one of the in person tryouts).</li>
+                                    <li style="margin-bottom: 30px; padding-left:2em; text-indent: -2em;">Option 3: Video tryout via Skype (if circumstances prevent you from attending one of the in person tryouts).</li>
                                 <p></p>
                             </div>
                         </div>
