changed "training" to "professional development"

--- a/Job Descriptions/Facilitator.html
+++ b/Job Descriptions/Facilitator.html
@@ -454,7 +454,7 @@
                             </span>
                             <div class="feature-copy" style="    float: right;     width: 85%;">
                                 <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Training</h3>
-                                <p class="description">Available to attend in-person training (travel paid for by QLN): <strong><span style="text-decoration: underline;">"Know It By Heart"</span> - Wednesday, March 29th - Sunday, April 2nd</strong></p>
+                                <p class="description">Available to attend in-person professional development (travel paid for by QLN): <strong><span style="text-decoration: underline;">"Know It By Heart"</span> - Wednesday, March 29th - Sunday, April 2nd</strong></p>
                             </div>
                         </div>
                     </div>
