get rid of confusing availability thing

--- a/Job Descriptions/Facilitator.html
+++ b/Job Descriptions/Facilitator.html
@@ -439,7 +439,7 @@
                             </span>
                             <div class="feature-copy" style="    float: right;     width: 85%;">
                                 <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Summer Availability</h3>
-                                <p class="description">Available during summer for placement (June through August 2017)</p>
+                                <p class="description">Available during summer for placement on college campuses in CA and PA (June - August 2017; paid for by QLN)</p>
                             </div>
                         </div>
                     </div>
@@ -466,17 +466,6 @@
                             <div class="feature-copy" style="    float: right;     width: 85%;">
                                 <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Relationship</h3>
                                 <p class="description">Desire a long-term relationship with Quantum Learning Network.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="feature-left" style="float: left; width: 100%; position: relative;">
-                            <span class="icon" style="    float: left;     text-align: center;     width: 15%; margin-top:2px;">
-                                <i class="fa fa-lg fa-globe"></i>
-                            </span>
-                            <div class="feature-copy" style="    float: right;     width: 85%;">
-                                <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Summer Placement</h3>
-                                <p class="description">Summer camp placement from June to August (located on college campuses across the country; paid for by QLN).</p>
                             </div>
                         </div>
                     </div>
