updated kibh and fit dates list styles

--- a/Dates and Locations Holder.html
+++ b/Dates and Locations Holder.html
@@ -75,6 +75,8 @@
                                     <p>Senior Forum</p>
                                     <strong>July 8 - July 23</strong>
                                     <p>Quantum Academy</p>
+                                    <strong>July 25 - July 30</strong>
+                                    <p>Junior Forum</p>
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
