--- a/Job Descriptions/Facilitator.html
+++ b/Job Descriptions/Facilitator.html
@@ -425,9 +425,10 @@
                             <div class="feature-copy" style="    float: right;     width: 85%;">
                                 <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Tryout</h3>
                                 <p style="margin-bottom: 10px !important;margin: 0 0 10px;font-size: 16px;">Attend a facilitator tryout: <strong><span style="text-decoration:underline;">"Paving the Way"</span></strong> - see options below.</p>
-                                    <li>Option 1: In person: <strong>February 25, 2017</strong> in Chicago, IL</li>
-                                    <li>Option 2: In person: <strong>March 4, 2017</strong> in San Diego, CA</li>
-                                    <li style="margin-bottom: 30px; padding-left:2em; text-indent: -2em;">Option 3: Video tryout via Skype (if circumstances prevent you from attending one of the in person tryouts).</li>
+                                    <li class="list-item">Option 1: In person: <strong>February 25, 2017</strong> in Chicago, IL</li>
+                                    <li class="list-item">Option 2: In person: <strong>March 4, 2017</strong> in San Diego, CA</li>
+                                    <li class="list-item-end">Option 3: Video tryout via Skype (if circumstances prevent you from attending one of the in person tryouts).</li>
+                                <!--Needed to get around issue w/ WP theme last:child-->
                                 <p></p>
                             </div>
                         </div>
@@ -454,7 +455,11 @@
                             </span>
                             <div class="feature-copy" style="    float: right;     width: 85%;">
                                 <h3 class="description-title"  style="font-size: 18px; color: #1a1a1a; ">Training</h3>
-                                <p class="description">Available to attend in-person professional development (travel paid for by QLN): <strong><span style="text-decoration: underline;">"Know It By Heart"</span> - Wednesday, March 29th - Sunday, April 2nd</strong></p>
+                                <p style="margin-bottom: 10px !important;margin: 0 0 10px;font-size: 16px;">Available to attend in-person professional development for all dates (travel paid for by QLN):</p>
+                                    <li class="list-item"><span style="text-decoration: underline;">"Know It By Heart"</span><strong> - Wednesday, March 29th - Sunday, April 2nd</strong></li>
+                                    <li class="list-item-end"><span style="text-decoration: underline;">"Facilitators In Training"</span><strong> - Wednesday, July 5th - Saturday, July 15th</strong></li>
+                                <!--Needed to get around issue w/ WP theme last:child-->
+                                <p></p>
                             </div>
                         </div>
                     </div>
