--- a/Why SuperCamp.html
+++ b/Why SuperCamp.html
@@ -1,7 +1,7 @@
 <section class="bg-primary-bs" style="margin-top: -2px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+    <div class="container-bs">
+        <div class="row-bs">
+            <div class="col-lg-8-bs col-lg-offset-2-bs text-center-bs">
                 <h2 class="section-heading-bs">Why work at SuperCamp?</h2>
                 <hr class="bs" style="border-color: #97ABBD;">
                 <p class="bs">Being a part of SuperCamp is unlike anything else. Between the atmosphere, the people you work with, and the energy, you're sure to walk away with a life-changing experience. SuperCamp allows you to obtain a better understanding of who
