--- a/Logistics Administrator Position.html
+++ b/Logistics Administrator Position.html
@@ -1,21 +1,23 @@
-<section>
-  <div class="row">
-    <div class="col-md-12 text-center">
-      <div class="position-card">
-        <div class="position-card-icon">
-          <span class="*******">
-            <i class="*********"></i>
-          </span>
+<section class="bg-primary-bs">
+  <div class="container-bs">
+    <div class="row-bs">
+      <div class="col-md-8-bs col-md-offset-2-bs text-center-bs">
+        <div class="position-card col-md-12-bs">
+          <div class="position-card-icon">
+            <span>
+              <i class="fa fa-pie-chart"></i>
+            </span>
+          </div>
+          <h3 class="position-card-heading">Hiring for SuperCamp and QL Logistics Administrator!</h3>
+          <span class="position-card-sub-heading">We have a position open in QLN's Programs Department!</span>
+          <p>Let us know if you are interested in applying for the position of SuperCamp and QL Logistics Administrator, a full time position in Oceanside. We’re looking for a detail-oriented person with excellent organizational, planning, computer, and communication skills – who shares SuperCamp’s vision and values.
+            <br>Responsibilities include site and vendor relations, supplies, shipping, tracking spreadsheets, site logistics, training support, products and more – a team player who supports what needs to be done.
+            <br>Please send Joe Chapon an email at jchapon@qln.com if you are interested or know someone who may be a great fit for the position.
+            <br>This position will be filling big shoes. After almost ten years, Spencer Birch is leaving QLN for a new direction in his life. We wish him well and thank him for all of his contributions to SuperCamp and Quantum Learning.
+            <br>Best,
+            <br>QLN Team
+          </p>
         </div>
-        <h3>Hiring for SuperCamp and QL Logistics Administrator!</h3>
-        <p class="bs">We have a position open in QLN's Programs Department!</p>
-        <p>Let us know if you are interested in applying for the position of SuperCamp and QL Logistics Administrator, a full time position in Oceanside. We’re looking for a detail-oriented person with excellent organizational, planning, computer, and communication skills – who shares SuperCamp’s vision and values.
-          <br>Responsibilities include site and vendor relations, supplies, shipping, tracking spreadsheets, site logistics, training support, products and more – a team player who supports what needs to be done.
-          <br>Please send Joe Chapon an email at jchapon@qln.com if you are interested or know someone who may be a great fit for the position.
-          <br>This position will be filling big shoes. After almost ten years, Spencer Birch is leaving QLN for a new direction in his life. We wish him well and thank him for all of his contributions to SuperCamp and Quantum Learning.
-          <br>Best,
-          <br>QLN Team
-        </p>
       </div>
     </div>
   </div>
