--- a/Logistics Administrator Position/Logistics Administrator Position.html
+++ b/Logistics Administrator Position/Logistics Administrator Position.html
@@ -10,13 +10,9 @@
           </div>
           <h3 class="position-card-heading">Hiring for SuperCamp and QL Logistics Administrator!</h3>
           <span class="position-card-sub-heading">We have a position open in QLN's Programs Department!</span>
-          <p>Let us know if you are interested in applying for the position of SuperCamp and QL Logistics Administrator, a full time position in Oceanside. We’re looking for a detail-oriented person with excellent organizational, planning, computer, and communication skills – who shares SuperCamp’s vision and values.
-            <br>Responsibilities include site and vendor relations, supplies, shipping, tracking spreadsheets, site logistics, training support, products and more – a team player who supports what needs to be done.
-            <br>Please send Joe Chapon an email at jchapon@qln.com if you are interested or know someone who may be a great fit for the position.
-            <br>This position will be filling big shoes. After almost ten years, Spencer Birch is leaving QLN for a new direction in his life. We wish him well and thank him for all of his contributions to SuperCamp and Quantum Learning.
-            <br>Best,
-            <br>QLN Team
-          </p>
+          <div class="text-left">
+            <p>Let us know if you are interested in applying for the position of SuperCamp and QL Logistics Administrator, a full time position in Oceanside. We’re looking for a detail-oriented person with excellent organizational, planning, computer, and communication skills – who shares SuperCamp’s vision and values.<br><br>Responsibilities include site and vendor relations, supplies, shipping, tracking spreadsheets, site logistics, training support, products and more – a team player who supports what needs to be done.<br><br>Please send Joe Chapon an email at <a href="mailto:jchapon@qln.com">jchapon@QLN.com</a> if you are interested or know someone who may be a great fit for the position.<br><br>This position will be filling big shoes. After almost ten years, Spencer Birch is leaving QLN for a new direction in his life. We wish him well and thank him for all of his contributions to SuperCamp and Quantum Learning.<br><br>Best,<br>QLN Team</p>
+          </div>
         </div>
       </div>
     </div>
