Changed "View More" link to be unified with rest

--- a/Dates and Locations Holder.html
+++ b/Dates and Locations Holder.html
@@ -7,7 +7,7 @@
                 <p class="bs">Since 1982 we've hosted amazing camps across the United States at leading universities. We also work with international partners to bring the SuperCamp experience to teens around the world. More than 75,000 students have participated...and
                     counting!
                 </p>
-                <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/staff/dates-and-locations/">View More</a>
+                <p class="btn-actions" style="margin-top: 30px;"><a href="http://www.supercamp.com/staff/dates-and-locations/" target="_blank" class="pos-hdr-btn pos-hdr-btn-back kibh-back-btn" style="color: #fff;"><i class="fa fa-calendar"></i>&nbsp; View More</a></p>
             </div>
         </div>
         <div class="row-bs">
