--- a/Slider Button Links.html
+++ b/Slider Button Links.html
@@ -1,5 +1,75 @@
 <div class="row-bs slider-buttons">
   <div class="col-sm-12-bs">
+    <p class="btn-actions">
+      <a href="https://supercamp.campintouch.com/ui/forms/application/staff/App" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-rocket fa-fw"></i>&nbsp Apply Now</a>
+      <a href="https://supercamp.campintouch.com/" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-arrow-circle-o-right fa-fw"></i>&nbsp CampInTouch</a>
+    </p>
+    <p class="btn-actions">
+      <a href="#whatsnew" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-flag fa-fw"></i>&nbsp What's New For 2017</a>
+      <a href="http://www.supercamp.com/our-staff/" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-users fa-fw"></i>&nbsp Meet Our Team</a>
+      <a href="#contact-info" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-phone fa-fw"></i>&nbsp Contact Information</a>
+    </p>
+  </div>
+</div>
+
+
+
+
+
+<div class="container-bs">
+  <div class="row-bs slider-buttons">
+    <div class="col-xs-6-bs">
+      <p class="btn-actions">
+        <a href="https://supercamp.campintouch.com/ui/forms/application/staff/App" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-rocket fa-fw"></i>&nbsp Apply Now</a>
+      </p>
+    </div>
+    <div class="col-xs-6-bs">
+      <p class="btn-actions">
+        <a href="https://supercamp.campintouch.com/" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-arrow-circle-o-right fa-fw"></i>&nbsp CampInTouch</a>
+      </p>
+    </div>
+    <div class="col-xs-4-bs">
+      <p class="btn-actions">
+        <a href="#whatsnew" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-flag fa-fw"></i>&nbsp What's New For 2017</a>
+      </p>
+    </div>
+    <div class="col-xs-4-bs">
+      <p class="btn-actions">
+        <a href="http://www.supercamp.com/our-staff/" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-users fa-fw"></i>&nbsp Meet Our Team</a>
+      </p>
+    </div>
+    <div class="col-xs-4-bs">
+      <p class="btn-actions">
+        <a href="#contact-info" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-phone fa-fw"></i>&nbsp Contact Information</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="row-bs slider-buttons">
+  <div class="col-sm-12-bs">
+    <p class="btn-actions">
+      <a href="https://supercamp.campintouch.com/ui/forms/application/staff/App" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-rocket fa-fw"></i>&nbsp Apply Now</a>
+      <a href="https://supercamp.campintouch.com/" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-arrow-circle-o-right fa-fw"></i>&nbsp CampInTouch</a>
+      <a href="#whatsnew" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-flag fa-fw"></i>&nbsp What's New For 2017</a>
+      <a href="http://www.supercamp.com/our-staff/" target="_blank" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-users fa-fw"></i>&nbsp Meet Our Team</a>
+      <a href="#contact-info" class="pos-hdr-btn pos-hdr-btn-success staff-slider-btn"><i class="fa fa-phone fa-fw"></i>&nbsp Contact Information</a>
+    </p>
+  </div>
+</div>
+
+
+
+
+
+
+
+<div class="row-bs slider-buttons">
+  <div class="col-sm-12-bs">
       <a target="_blank" class="qbutton green" href="https://supercamp.campintouch.com/ui/forms/application/staff/App"><i class="fa fa-id-card-o fa-fw"></i>&nbsp Apply Now</a>
       <a target="_blank" class="qbutton green" href="https://supercamp.campintouch.com/"><i class="fa fa-arrow-circle-o-right fa-fw"></i>&nbsp CampInTouch</a>
       <a class="qbutton green" href="#whatsnew"><i class="fa fa-flag fa-fw"></i>&nbsp What's New For 2017</a>
