Lots of changes to portfolio
Added font-awesome link. Made skills into 2 columns. Added Skills.
Removed "Hire-Me" button. Added work experience. Added education
experience.

--- a/Portfolio - 1/Kards10 - Copy/Kards10/index.html
+++ b/Portfolio - 1/Kards10 - Copy/Kards10/index.html
@@ -26,6 +26,10 @@
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
 
+  <!-- font awesome
+  ================================================== -->
+  <script src="https://use.fontawesome.com/28bf70931a.js"></script>
+
    <!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.png">
@@ -155,32 +159,63 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Over the years, I've aquired a set of skills relating to computer programming, and web design. I'm primarily self-taught. I'm eager to put my skills to good use, and continue my love of learning.</p>
 
-				<ul class="skill-bars">
-				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
-				   </li>
-				   <li>
+      </div>
 
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
-				   </li>
+      <div class="col-six tab-full">
+        <div class="col-six tab-1-2">
+  				<ul class="skill-bars">
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>HTML5</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>CSS3</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>JQuery</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>Javascript</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>Wordpress</strong>
+  				   </li>
 
-				</ul> <!-- /skill-bars -->
+  				</ul> <!-- /skill-bars -->
+        </div>
+
+        <div class="col-six tab-1-2">
+  				<ul class="skill-bars">
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>GIMP</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>Adobe Photoshop</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>Sony Vegas Pro</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>Lightworks</strong>
+  				   </li>
+  				   <li>
+  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<strong>Bootstrap</strong>
+  				   </li>
+
+  				</ul> <!-- /skill-bars -->
+        </div>
+
 
    		</div>
 
@@ -188,7 +223,6 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
    			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
    	</div>
@@ -206,7 +240,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">With a friendly attitude and a determination to put my best work into fruition, I can be a positive asset to any team.</p>
 
    		</div>
    	</div> <!-- /section-intro-->
@@ -230,13 +264,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>HR Specialist / Web Designer</h3>
+	   					<p>June 2016 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>Quantum Learning Network</h4>
+	   					<p>Responsible for staffing the SuperCamp summer program - recruitment, interviewing, contracting over 100 new employees. Created a staff website, designed HTML newsletters, and created numerous media campaigns as a key member of the SuperCamp Programs Department.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -248,14 +282,14 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Administrative Assistant</h3>
+	   					<p>June 2014 - October 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   					<h4>Lincoln Property Management</h4>
+	   					<p>Responsible for the recruitment and interviewing of staff. Coordinated meetings, prepared reports, and actively maintained quality assurance. Communicated with customers, employees, and the public to provide information and address concerns.</p>
+            </div>
 
 	   			</div> <!-- /timeline-block -->
 
@@ -266,13 +300,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Lifeguard Instructor</h3>
+	   					<p>December 2014 - October 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Lincoln Property Management</h4>
+	   					<p>American Red Cross certified (Life Guard Instructor, Administering Emergency Oxygen, CPR, AED, First Aid, Lifeguarding, Blood-borne Pathogens, First Aid for Public Safety Personnel). Supervised the safety and rescue of all swimmers and water sports participants.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -295,6 +329,24 @@
 
    			<div class="timeline-wrap">
 
+          <div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Bachelor Degree (In Progress)</h3>
+	   					<p>Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>MiraCosta College</h4>
+	   					<p>Currently pursuing a Bachelors of Science in Biology.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -302,13 +354,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Associates Degree</h3>
+	   					<p>June 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>MiraCosta College</h4>
+	   					<p>Biology Major with lab experience in Organic Chemistry, Molecular & Evolutionary Biology, and Foundational Physics.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -320,31 +372,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>International Baccalaureate Diploma</h3>
+	   					<p>June 2013</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
-
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Vista Unified</h4>
+	   					<p>Internationally accepted qualification for entry into higher education. Specialized in Biology and History.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -366,7 +400,7 @@
    		<div class="col-twelve">
 
    			<h5>Portfolio</h5>
-   			<h1>Check Out Some of My Works.</h1>
+   			<h1>Check Out Some of My Projects.</h1>
 
    			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
