--- a/Portfolio - 1/Kards10 - Copy/Kards10/index.html
+++ b/Portfolio - 1/Kards10 - Copy/Kards10/index.html
@@ -128,7 +128,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>While I love the commaradery and support of a team envrionment, I am incredibly self-motivated and determined to get the job done without compromising on quality.</p>
+   			<p>While I love the commaradery and support of a team envrionment, I am also incredibly self-motivated and determined to get the job done without compromising on quality.</p>
 
    			<ul class="info-list">
    				<li>
@@ -336,7 +336,8 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree (In Progress)</h3>
+	   					<h3>Bachelor Degree</h3>
+              <h4>(In Progress)</h4>
 	   					<p>Present</p>
 	   				</div>
 
