--- a/Portfolio - 1/Kards10 - Copy/Kards10/index.html
+++ b/Portfolio - 1/Kards10 - Copy/Kards10/index.html
@@ -115,7 +115,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/profile-pic-2.jpg" alt="Profile Picture">
 
    				<p class="lead">I'm a passionate Web Designer and HR Specialist. I'm also persuing a degree in Bio/Chem. Since I was 11, I've been fascinated with computers and design. I started writing in Visual Basic to cheat on flash games. I progressed into design with Photoshop, GIMP, and Sony Vegas Pro. Now I'm proud to say that I've grown in my computer and design skillset, making me a valuable asset to any team.</p>
    			</div>
@@ -260,7 +260,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-code"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -278,7 +278,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-pie-chart"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -296,7 +296,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-life-ring"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -332,7 +332,7 @@
           <div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -351,7 +351,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-university"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -369,7 +369,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-book"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
