--- a/Portfolio - 1/Kards10 - Copy/Kards10/index.html
+++ b/Portfolio - 1/Kards10 - Copy/Kards10/index.html
@@ -32,7 +32,14 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="images/favicon.png">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="images/manifest.json">
+  <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#2198f3">
 
 </head>
 
@@ -167,23 +174,23 @@
         <div class="col-six tab-1-2">
   				<ul class="skill-bars">
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-html5" aria-hidden="true"></i></span></div>
   				   	<strong>HTML5</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-css3" aria-hidden="true"></i></span></div>
   				   	<strong>CSS3</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-code" aria-hidden="true"></i></span></div>
   				   	<strong>JQuery</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-code" aria-hidden="true"></i></span></div>
   				   	<strong>Javascript</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-wordpress" aria-hidden="true"></i></span></div>
   				   	<strong>Wordpress</strong>
   				   </li>
 
@@ -193,23 +200,23 @@
         <div class="col-six tab-1-2">
   				<ul class="skill-bars">
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-picture-o" aria-hidden="true"></i></span></div>
   				   	<strong>GIMP</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-picture-o" aria-hidden="true"></i></span></div>
   				   	<strong>Adobe Photoshop</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-video-camera" aria-hidden="true"></i></span></div>
   				   	<strong>Sony Vegas Pro</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-video-camera" aria-hidden="true"></i></span></div>
   				   	<strong>Lightworks</strong>
   				   </li>
   				   <li>
-  				   	<div class="progress percent100"><span><i class="fa fa-check" aria-hidden="true"></i></span></div>
+  				   	<div class="progress percent100"><span><i class="fa fa-code" aria-hidden="true"></i></span></div>
   				   	<strong>Bootstrap</strong>
   				   </li>
 
@@ -403,7 +410,7 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Projects.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">I started writing programs to cheat on flash games, themeing jailbroken iPods, editing photo and video, and creating webpages. I'm excited to see what project will come next!</p>
 
    		</div>
    	</div> <!-- /section-intro-->
@@ -417,13 +424,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/1.jpg" alt="SuperCamp Staff Page">
 	                  <a href="#modal-01" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>
+		     					       <h3 class="folio-title">SuperCamp Staff Page</h3>
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Web Design
 		     					       </span>
 		     					   </div>
 	                     </div>
@@ -516,18 +523,18 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<img src="images/portfolio/modals/1-1.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>SuperCamp Staff Page</h4>
+					      <p>I designed a completly new staff page for SuperCamp. Consistent branding, ease-of-use, and clean effects were kept in mind when designing this page.</p>
 
-					      <div class="categories">Web Development</div>
+					      <div class="categories">Web Design</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://www.supercamp.com/staff/">View Page</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
