Revert "i guess portfolio edits"
This reverts commit 57c552484d10fb5c4d39af40cd18149f26026796.

--- a/Portfolio - 1/Kards10 - Copy/Kards10/index.html
+++ b/Portfolio - 1/Kards10 - Copy/Kards10/index.html
@@ -26,10 +26,6 @@
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
 
-  <!-- Sumo
-  ================================================== -->
-  <script src="//load.sumome.com/" data-sumo-site-id="b4457c6aa0bfa3eb3a6a55ac38141be93b43d6ff072dd27031bd5ce9a50635f7" async="async"></script>
-
   <!-- font awesome
   ================================================== -->
   <script src="https://use.fontawesome.com/28bf70931a.js"></script>
@@ -444,11 +440,11 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/2.jpg" alt="SuperCamp Facilitators">
+	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">SuperCamp Facilitators</h3>
+	                     		<h3 class="folio-title">Shutterbug</h3>
 		     					    	<span class="folio-types">
 		     					       	  Web Design
 		     					      </span>
@@ -527,7 +523,7 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/1-1.jpg" alt="SuperCamp Staff Page" />
+				     		<img src="images/portfolio/modals/1-1.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
@@ -547,18 +543,18 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/2-1.jpg" alt="SuperCamp Facilitators" />
+				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>SuperCamp Facilitator Showcase</h4>
-					      <p>I created this page separate from the SuperCamp Staff page to showcase our talented staff members to clients interested in SuperCamp. It includes modals with biographies for each of the staff members and several other sections that demonstrate the professionalism of SuperCamp.</p>
+					      <h4>Shutterbug</h4>
+					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
 					      <div class="categories">Web Design</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.supercamp.com/our-staff/">View Page</a>
+			            <a href="http://www.behance.net">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
@@ -800,6 +796,119 @@
    	</div> <!-- /services-content -->
 
 	</section> <!-- /services -->
+
+
+	<!-- stats Section
+   ================================================== -->
+	<section id="stats" class="count-up">
+
+		<div class="row">
+			<div class="col-twelve">
+
+				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
+
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-pencil-ruler"></i>
+						</div>
+
+						<h3 class="stat-count">
+							1500
+						</h3>
+
+						<h5 class="stat-title">
+							Projects Completed
+						</h5>
+
+					</div> <!-- /stat -->
+
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-users"></i>
+						</div>
+
+						<h3 class="stat-count">
+							900
+						</h3>
+
+						<h5 class="stat-title">
+							Happy Clients
+						</h5>
+
+					</div> <!-- /stat -->
+
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-badge"></i>
+						</div>
+
+						<h3 class="stat-count">
+							200
+						</h3>
+
+						<h5 class="stat-title">
+							Awards Received
+						</h5>
+
+					</div> <!-- /stat -->
+
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-light-bulb"></i>
+						</div>
+
+						<h3 class="stat-count">
+							120
+						</h3>
+
+						<h5 class="stat-title">
+							Crazy Ideas
+						</h5>
+
+					</div> <!-- /stat -->
+
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-cup"></i>
+						</div>
+
+						<h3 class="stat-count">
+							1500
+						</h3>
+
+						<h5 class="stat-title">
+							Coffee Cups
+						</h5>
+
+					</div> <!-- /stat -->
+
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-clock"></i>
+						</div>
+
+						<h3 class="stat-count">
+							7200
+						</h3>
+
+						<h5 class="stat-title">
+							Hours
+						</h5>
+
+					</div> <!-- /stat -->
+
+				</div> <!-- /stats-list -->
+
+			</div> <!-- /twelve -->
+		</div> <!-- /row -->
+
+	</section> <!-- /stats -->
 
 
    <!-- contact
