--- a/Contact Information.html
+++ b/Contact Information.html
@@ -8,49 +8,35 @@
                 <p class="bs">Have any questions? Wondering about who to go to or how to reach them? Look no further!</p>
             </div>
         </div>
+
         <div class="row-bs">
-            <div class="col-sm-4-bs text-center-bs">
-                <div class="ch-item ch-img-3">
-                    <div class="ch-info-wrap">
-                        <div class="ch-info">
-                            <div class="ch-info-front ch-img-3"></div>
-                            <div class="ch-info-back">
-                                <h3>Operations Manager</h3>
-                                <p style="padding:0px 0.313em;">(800) 285-3276 x150 <a style="padding-top: 0px;" href="mailto:sbirch@qln.com">sbirch@QLN.com</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-1">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-1"></div>
                             <div class="ch-info-back">
-                                <h3 style="padding: 1.563em 0 0 0;">Faculty Relations Liaison</h3>
+                                <h3 style="padding: 1.563em 0 0 0;">HR Specialist</h3>
                                 <p style="padding:0px 0.313em;">(800) 285-3276 x140 <a style="padding-top: 0px;" href="mailto:mkennedy@qln.com">mkennedy@QLN.com</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-4">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-4"></div>
                             <div class="ch-info-back">
-                                <h3 style="padding: 1.875em 0 0 0;">HR Administrative Specialist</h3>
+                                <h3 style="padding: 1.875em 0 0 0;">HR Specialist</h3>
                                 <p style="padding:0px 0.313em;">(800) 285-3276 x139 <a style="padding-top: 0px;" href="mailto:alee@qln.com">alee@QLN.com</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row-bs">
-            <div class="col-sm-4-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-2">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -63,20 +49,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4-bs text-center-bs">
-                <div class="ch-item ch-img-5">
-                    <div class="ch-info-wrap">
-                        <div class="ch-info">
-                            <div class="ch-info-front ch-img-5"></div>
-                            <div class="ch-info-back">
-                                <h3 style="padding: 1.875em 0 0 0;">Operations Specialist</h3>
-                                <p style="padding:0px 0.313em;">(800) 285-3276 x134 <a style="padding-top: 0px;" href="mailto:kterrill@qln.com">kterrill@QLN.com</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-6">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
